# cyrx

./: .gitignore  .gitmodules  README.md  pyproject.toml  setup.py
.github/workflows/: build-wheels.yml  release-wheels.yml  run-cibuildwheel.yml  test.yml
src/cyrx/: __init__.py  _cyrx.cpp  _cyrx.html  _cyrx.pyi  _cyrx.pyx  _randomx.pxd
tests/: test_randomx.py
